--- a/wp-content/themes/oceanwp/partials/new-header/new-header.css
+++ b/wp-content/themes/oceanwp/partials/new-header/new-header.css
@@ -264,9 +264,10 @@
 }
 
 #main-page-top {
+	position: relative;
 	min-height: 500px;
 	padding-top: 95px;
-	background: url('/wp-content/uploads/2020/03/slider-2.jpg') 50% no-repeat;
+	/*background: url('/wp-content/uploads/2020/03/slider-2.jpg') 50% no-repeat;*/
 	background-size: cover;
 }
 
@@ -345,4 +346,31 @@
 
 main.inner-main {
 	padding-top: 50px;
+}
+
+#main-page-top .container {
+	position: relative;
+	z-index: 2;
+}
+
+.main-page-top-bg,
+#main-page-top::after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+}
+
+#main-page-top::after {
+	content: '';
+	z-index: 1;
+	background-color: #000;
+	opacity: .3;
+}
+
+.main-page-top-bg div {
+	height: 100%;
 }
