--- a/wp-content/themes/oceanwp/partials/new-header/new-header.css
+++ b/wp-content/themes/oceanwp/partials/new-header/new-header.css
@@ -49,16 +49,21 @@
 #new-header {
 	background-color: #272c4c;
 	font-family: Roboto, sans-serif;
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+	z-index: 999;
+
 }
 
-@media (min-width: 1025px) {
+/*@media (min-width: 1025px) {
 	#new-header {
 		position: -webkit-sticky;
 		position: sticky;
 		top: 0;
 		z-index: 999;
 	}
-}
+}*/
 
 .new-header-top {
 	background-color: #272c4c;
@@ -86,10 +91,10 @@
 	}
 }
 
-.menu-menu-container {
+.header-menu-container {
 	display: none;
 	width: 100vw;
-	padding: 15px;
+	padding: 15px 15px 34px;
 	position: absolute;
 	top: 100%;
 	left: 50%;
@@ -99,7 +104,7 @@
 }
 
 @media (min-width: 1025px) {
-	.menu-menu-container {
+	.header-menu-container {
 		display: block;
 		padding: 0;
 		position: initial;
@@ -114,12 +119,13 @@
 
 .new-header-contact {
 	flex-direction: column;
-	align-items: center;
+	margin-left: 0;	
 }
 
 @media (min-width: 1025px) {
 	.new-header-contact {
 		flex-direction: row;
+		align-items: center;
 	}
 }
 
@@ -408,3 +414,9 @@ main.inner-main {
 .main-page-top-bg div {
 	height: 100%;
 }
+
+.header-menu-container .elementor-widget-container {
+	display: flex;
+	justify-content: center;
+}
+
